--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="time"></div>
     <div id="value"></div>
-    <button id="btn">Get fingerprintt</button>
+    <button id="btn">Get fingerprintt314</button>
   </body>
   <script src="fingerprint2.js"></script>
   <script src="index.js"></script>
