--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="value"></div>
     <button id="btn">Get fingerprintt314</button>
   </body>
-  <script src="fingerprint2.js"></script>
+  <script src="adributor-fingerprint2.js"></script>
   <script src="index.js"></script>
 </html>
